[package]
name = "mazaforja"
version = "0.1.0"
edition = "2024"

[features]
default = []
x11 = []

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
orgize = "0.9.0"
quick-xml = { version = "0.37", features = ["serialize"] }
sdl3 = { version = "0.18.0", features = ["ttf"] }
fontconfig = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
